# sonicstream

./: .gitignore  ALGORITHM_RULES.md  README.md  clean_zone.py  cleanup.py  docker-compose.yml  main.py  package-lock.json  package.json  pyproject.toml  readme.md  switch_branch.bat
.agent/skills/codeReview/: SKILL.md
.agent/skills/componentGen/: SKILL.MD
.agent/skills/gitCommit/: SKILL.MD
.agent/skills/recSys/: SKILL.MD
.agent/skills/skillCheck/: SKILL.MD
.agent/skills/testGen/: SKILL.MD
.agent/workflows/: feature-page-design.md
.agents/skills/dbManage/: SKILL.MD
.agents/skills/recSys/: SKILL.MD
backend/: .dockerignore  Dockerfile  README.md  analyze_db.py  check_corr.py  check_pop.py  check_raw_pop.py  debug_tests.py  launcher.py  launcher_corr.py  launcher_raw.py  pyproject.toml  requirements.txt  spotify.sqlite:Zone.Identifier
backend/app/: database.py  dependencies.py  main.py  schemas.py  user_schemas.py  users_database.py
backend/app/models/: users.py
backend/app/routers/: recommendations.py  search.py
backend/app/routes/: albums.py  auth.py  recommendations.py  tracks.py
backend/app/services/: recommendation.py  search.py
backend/scripts/: create_dev_db.py  dev_seed.py  export_to_json.py  fast_seed.py  ingest_data.py  ingest_data.py:Zone.Identifier  optimize_db.py  reset_db.py  seed.py
backend/scripts/etl/: create_dev_db.py  ingest_data.py  optimize_db.py
backend/scripts/seeding/: create_albums_table.py  dev_seed.py  fast_seed.py  reset_db.py  seed.py
backend/tests/: test_api_mock.py  test_ingest.py
frontend/: Dockerfile  README.md  next.config.ts  package-lock.json  package.json  tailwind.config.ts
frontend/app/: layout.tsx  page.tsx
frontend/src/app/: page.tsx  (+2 more)
infra/: docker-compose.yml
public/: dataset.csv
src/app/: globals.css  page.module.css  page.tsx
src/components/: AlbumSelector.module.css  AlbumSelector.tsx  SuggestionList.module.css  SuggestionList.tsx
src/utils/: recommendationEngine.js  recommendationEngine.ts
(+41 files in other folders)
