[project]
name = "music-discovery"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.128.0",
    "httpx>=0.28.1",
    "kaggle>=1.8.3",
    "numpy>=2.4.0",
    "pgvector>=0.4.2",
    "polars>=1.36.1",
    "psycopg[binary,pool]>=3.3.2",
    "python-dotenv>=1.2.1",
    "scikit-learn>=1.8.0",
    "uvicorn>=0.40.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
